--- a/.github/workflows/htr-united-workflows.yml
+++ b/.github/workflows/htr-united-workflows.yml
@@ -39,7 +39,7 @@ jobs:
           pip install htr-united-metadata-generator htruc anybadge
       - name: Run Report
         run: |
-          humGenerator --chars -n NFD --parse alto --group ./data/*.xml --github-envs --to-json updated_metrics.json
+          humGenerator --chars -n NFD --parse alto --group ./data/*/*.xml --github-envs --to-json updated_metrics.json
           cat envs.txt >> $GITHUB_ENV
       - name: Get HTR United Badge Template
         if: github.ref == 'refs/heads/main'
@@ -80,7 +80,7 @@ jobs:
           pip install chocomufin
       - name: Run ChocoMufin
         run: |
-          chocomufin generate table.csv ./data/*.xml
+          chocomufin generate table.csv ./data/*/*.xml
           cat table.csv
   HTRVX:
     runs-on: ubuntu-latest
@@ -96,5 +96,5 @@ jobs:
           pip install htrvx
       - name: Run HTRVX
         run: |
-          htrvx --verbose --group --format alto --check-empty --segmonto --xsd --raise-empty ./data/*.xml
+          htrvx --verbose --group --format alto --check-empty --segmonto --xsd --raise-empty ./data/*/*.xml
 
